Fix scrollbars appearing on dropdowns

--- a/site/resources/styles/checker.css
+++ b/site/resources/styles/checker.css
@@ -590,7 +590,7 @@ input[type="checkbox"]:not(#display-bg-checker):checked {
 .dropdown > input[name="collapse"]:checked ~ .dropdown-content {
 	height: auto;
 	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
-	overflow: scroll;
+	overflow: auto;
 	border-top: 1px solid var(--tone-colour,#FFFFFF);
 	border-right: 1px dashed var(--tone-colour,#FFFFFF);
 	border-bottom: 1px dashed var(--tone-colour,#FFFFFF);
@@ -638,7 +638,7 @@ input[type="checkbox"]:not(#display-bg-checker):checked {
 
 .dropdown-display-controls > input[name="collapse"]:checked ~ .dropdown-content,
 .dropdown-sidenav-hamburger > input[name="collapse"]:checked ~ .dropdown-content {
-	overflow: scroll;
+	overflow: auto;
 	height: auto;
 	transition: height 0.375s cubic-bezier(0, 0.5, 0.25, 1);
 	padding: 0.75rem;
